--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,10 @@
     },
     "autoload": {
         "classmap": [ "src/" ]
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "master"
+        }
     }
 }
